<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CGO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_resource">My Resource</string>
    <string name="action_download">Download Manage</string>
    
    
    <!-- Common -->
    <string name="back_tips">Click again to exit</string>
    <string name="is_getting">loading...</string>
    <string name="tips">Tips</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="i_know">I know</string>
    <string name="yes">yes</string>
    
    
   
    
    <!-- popview_wb_list -->
    <string name="auto">Auto</string>
    <string name="lock">Lock</string>
    <string name="daylight">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="flucrescent">Flucrescent</string>
    <string name="incandescent">Incandescent</string>
    <string name="sunset_sunrise">Sunset/sunrise</string>
    <string name="custom">Custom</string>
     <string name="manual">Manual</string>
    
     
    <!-- operate Tips -->
    <string name="record_start_success">record start success!</string>
    <string name="record_start_failed">record start failed!</string>
    <string name="record_stop_success">record stop success!</string>
    <string name="record_stop_failed">record stop failed!</string>
    <string name="reset_tips">Make sure to reset?</string>
    <string name="format_tips">Determine the format?</string>
    <string name="space_lack_tips">SDcard will Fill !</string>
    <string name="sdcard_error_tips">Please insert SDcard at first !</string>
    <string name="export_success">export success!</string>
    
    
    
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="resolution_settings">Resolution settings</string>
    <string name="hue_settings">Color settings</string>
    <string name="photo_settings">Photo format settings</string>
    <string name="audio_settings">Record Audio settings</string>
    <string name="reset">Reset </string>
    <string name="format">Format SDcard </string>
    <string name="about">About </string>
    <string name="share">Share this App</string>
    <string name="share_to">Share To ...</string>
    <string name="version_info">Copyright (C) 2014-2015 Yuneec.Inc. All Rights Reserved.</string>
    <string name="set_success">Set successfully</string>
    <string name="set_failed">Setup failed</string>
    <string name="format_success">Format Success</string>
    <string name="format_failure">Format Failure</string>
    <string name="reset_success">Reset Success</string>
    <string name="reset_failure">Reset Failure</string>
    
    
    <!-- resolution -->
    <string name="resolution_set_success">Set successfully</string>
    <string name="resolution_set_failed">Setup failed</string>
    
    
    <!-- hue -->
    <string name="hue_set_success">Set successfully</string>
    <string name="hue_set_failed">Setup failed</string>
    
    
    <!-- camera -->
    <string name="taking_failure">Taking failure</string>
    <string name="taking_success">Pictures of success</string>
    
    <!-- loading -->
    <string name="waiting">Please wait ...</string>
    <string name="building">building ...</string>
    <string name="connecting">connecting ...</string>
    <string name="exporting">Exporting ...</string>
    <string name="initializing">Initializing ...</string>

    <!-- ablum -->
	<string name="image">Image</string>
	<string name="export">Export</string>
	<string name="media">Media</string>
	<string name="download_tips">The file is large, whether need to be downloaded to the local?</string>

	<!-- download -->
	<string name="is_reading_download">Reading download information...</string>
	<string name="download_complete">Complete</string>
	
	<!-- index -->
	<string name="flight">Flight</string>
	<string name="login">Login</string>
	<string name="user_resource">User Resource</string>
	<string name="study_manual">Study Manual</string>
	
	
	<!-- Share -->
	<string name="share_message">Message</string>
	<string name="share_qq">QQ</string>
	<string name="share_qzone">Qzone</string>
	<string name="share_sina">WeiBo</string>
	<string name="share_weixin">WeChat</string>
	<string name="share_moments">Moments</string>
	
	<!-- Test -->
	<string name="system_test_service">YuneecFly_SystemTestService</string>
	
</resources>
