<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dip"
        android:layout_marginRight="32dip"
        android:background="@drawable/shape_gray_border_rectangle"
        android:orientation="vertical" 
        >

        <TextView
            android:id="@+id/common_alert_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:gravity="center_vertical"
            android:layout_marginLeft="24dip"
            android:text="@string/tips"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/common_alert_dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="24dip"
            android:paddingRight="24dip"
            android:paddingTop="14dip"
            android:paddingBottom="14dip"
            android:textColor="@android:color/white"
            android:textSize="14sp" 
            android:lineSpacingExtra="3dip"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginTop="8dip"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:id="@+id/common_alert_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:orientation="horizontal" 
            android:layout_gravity="right"
            >

            <Button
                android:id="@+id/common_alert_dialog_cancel"
                android:layout_width="120dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/com_pop_list_item_selector"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="13sp" 
                />

            <Button
                android:id="@+id/common_alert_dialog_confirm"
                android:layout_width="120dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/com_pop_list_item_selector"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
           
        </LinearLayout>
    </LinearLayout>

</LinearLayout>